# BordeauxPoolUse

./: LICENSE  README.md  fetcher.py  get_occupancy.py  pyproject.toml
.github/workflows/: get_data.yml
data/Piscine Galin/2023/08/: 2023-08-18.json  2023-08-19.json
data/Piscine Galin/Zone Bassins/2023/08/: 2023-08-19.json  2023-08-20.json  2023-08-21.json  2023-08-22.json  2023-08-23.json  2023-08-24.json  2023-08-25.json  2023-08-26.json  2023-08-27.json  2023-08-28.json  2023-08-29.json  2023-08-30.json  2023-08-31.json
data/Piscine Galin/Zone Bassins/2023/09/: 2023-09-01.json  2023-09-02.json  2023-09-03.json  2023-09-04.json  2023-09-05.json  2023-09-06.json  2023-09-07.json  2023-09-08.json  2023-09-09.json  2023-09-10.json  2023-09-11.json  2023-09-12.json  2023-09-13.json  2023-09-14.json  2023-09-15.json  2023-09-16.json  2023-09-17.json  2023-09-18.json  2023-09-19.json  2023-09-20.json  2023-09-21.json  2023-09-22.json  2023-09-23.json  2023-09-24.json  2023-09-25.json  2023-09-26.json  2023-09-27.json  2023-09-28.json  2023-09-29.json  2023-09-30.json
data/Piscine Galin/Zone Bassins/2023/10/: 2023-10-01.json  2023-10-02.json  2023-10-03.json  2023-10-04.json  2023-10-05.json  2023-10-06.json  2023-10-07.json  2023-10-08.json  2023-10-09.json  2023-10-10.json  2023-10-11.json  2023-10-12.json  2023-10-13.json  2023-10-14.json  2023-10-15.json  2023-10-16.json  (+15 more)
data/Piscine Grand Parc/2023/01/: 2023-01-02.json
data/Piscine Judaique - Jean Boiteux/2023/08/: 2023-08-18.json  2023-08-19.json
data/Piscine Tissot/2023/08/: 2023-08-18.json  2023-08-19.json
(+5725 files in other folders)
