[tool.poetry]
name = "bordeauxpooluse"
version = "0.1.0"
description = ""
authors = ["Raphaël Vinot <github_rafiot@rafi0t.fr>"]
license = "BSD-2-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
matplotlib = "^3.10.8"


[tool.poetry.group.dev.dependencies]
ipython = "^8.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
